Ensure title and bookmarklet are always aligned

--- a/src/styles.less
+++ b/src/styles.less
@@ -59,6 +59,9 @@ body,
 
 .bookmarklet-header > div {
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-content: space-between;
 }
 
 .bookmarklet-header label,
@@ -66,7 +69,7 @@ body,
 	margin: 0;
 	padding: 0.5em;
 	font-weight: bold;
-	display: block;
+	flex: 1;
 }
 
 .bookmarklet-header p {
